2003-09-01  Araki Ken  <arakiken@users.sf.net>

	* Dumped core in selecting region in some situations. Fixed.

2003-08-29  MINAMI Hirokazu  <minami@mistfall.net>

	* x_dnd.c:
	 - fixed sgev in incremental data transfer.
	 - code cleanup.

2003-08-27  Araki Ken  <arakiken@users.sf.net>

	* The colors of lines next to empty ones were not reversed correctly
	  in selection. Fixed.

2003-08-25  Araki Ken  <arakiken@users.sf.net>

	* version.h.in: 2.8.0pre

2003-08-20  MINAMI Hirokazu  <minami@mistfall.net>

	* x_dnd.c: added a handler for DestroyNotity.

2003-08-18  MINAMI Hirokazu  <minami@mistfall.net>

	* x_window.c, x_dnd.h: code cleanup. 
	  XDnD subsystem is separated into x_dnd.c and should be easily
	  disabled if it's desired.
	* x_dnd.c: plugged tiny memory leaks.

2003-08-14  Araki Ken  <arakiken@users.sf.net>

	* Added tool/viewsfml/README,tool/viewsfml/Makefile.
	
	* viewsfml.sh: Replace charset=iso-8859-1 with charset=iso-2022-jp.

2003-08-14  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c(ml_edit_clear_line_to_right,ml_edit_clear_line_to_right_bce):
	  Garbage could be left even if line is cleared by ESC [ K. Fixed.
	  (Thanks to Kubota Tomohiro san)

	* Added tool/viewsfml/viewsfml.sh.

2003-08-12  MINAMI Hirokazu  <minami@mistfall.net>

	* x_dnd.c: for incremental transfer, parser/converter 
	  should be kept to remember its state(endianess/fragments etc.)

2003-08-10  MINAMI Hirokazu  <minami@mistfall.net>

	* x_xim.c:
	- xim->im should be cleared when im was closed due to an error.
	- Default XIM name is now "none", not "@im=none".

2003-08-10  Araki Ken  <arakiken@users.sf.net>

	* Cursor wasn't redrawn under vertical writing mode.
	  Added ml_xterm_event_listener_t.start_2 and fixed this problem.

	* Using ml_char_at() instead of refering to ml_line_t:chars[] array
	  directly.

	* ml_edit_intern.c: renamed to ml_edit_util.c.

2003-08-05  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.c(receive_scrolled_out_line): Adhoc workaround