@@ -17,6 +17,8 @@ KIK_MAP_TYPEDEF( x_font_name , ml_font_t , char *) ;
 typedef struct  x_font_custom
 {
 	KIK_MAP( x_font_name) *  font_name_table ;
+	KIK_MAP( x_font_name)  default_font_name_table ;
+	char *  default_font_name_cache ;
 
 	/* public(readonly) */
 	u_int  min_font_size ;
@@ -36,6 +38,8 @@ int  x_set_font_name( x_font_custom_t *  font_custom , ml_font_t  font ,
 	char *  fontname , u_int  font_size) ;
 
 char *  x_get_font_name( x_font_custom_t *  font_custom , u_int  font_size , ml_font_t  font) ;
+
+char *  x_get_font_name_r( x_font_custom_t *  font_custom , u_int  font_size , ml_font_t  font); 
 
 u_int  x_get_all_font_names( x_font_custom_t *  font_custom ,char ***  font_names , u_int  font_size) ;
 
